--- a/myblog/posts/sr/price-podataka/biblio.bib
+++ b/myblog/posts/sr/price-podataka/biblio.bib
@@ -21,3 +21,51 @@
 	address = {Chichester, West Sussex},
 	langid = {English}
 }
+
+@misc{betancourt2019,
+	title = {Probabilistic Modeling and Statistical Inference},
+	author = {Betancourt, Michael},
+	year = {2019},
+	month = {03},
+	date = {2019-03},
+	url = {https://betanalpha.github.io/assets/case_studies/modeling_and_inference.html}
+}
+
+@article{ribatti2009,
+	title = {William Harvey and the discovery of the circulation of the blood},
+	author = {Ribatti, Domenico},
+	year = {2009},
+	month = {09},
+	date = {2009-09-21},
+	journal = {Journal of Angiogenesis Research},
+	pages = {3},
+	volume = {1},
+	doi = {10.1186/2040-2384-1-3},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2776239/},
+	note = {PMID: 19946411
+PMCID: PMC2776239}
+}
+
+@article{michaleas,
+	title = {Joseph Lister (1827-1912): A Pioneer of Antiseptic Surgery},
+	author = {Michaleas, Spyros N and Laios, Konstantinos and Charalabopoulos, Alexandros and Samonis, George and Karamanou, Marianna},
+	journal = {Cureus},
+	pages = {e32777},
+	volume = {14},
+	number = {12},
+	doi = {10.7759/cureus.32777},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9854334/},
+	note = {PMID: 36686094
+PMCID: PMC9854334}
+}
+
+@inbook{reiss2022,
+	title = {Philosophy of Medicine},
+	author = {Reiss, Julian and Ankeny, Rachel A.},
+	editor = {Zalta, Edward N.},
+	year = {2022},
+	date = {2022},
+	publisher = {Metaphysics Research Lab, Stanford University},
+	edition = {Spring 2022},
+	url = {https://plato.stanford.edu/archives/spr2022/entries/medicine/}
+}
