kauzalno-zakljucivanje: sentc rewrite

--- a/myblog/posts/sr/kauzalno-zakljucivanje/index.qmd
+++ b/myblog/posts/sr/kauzalno-zakljucivanje/index.qmd
@@ -20,7 +20,7 @@ mermaid:
   theme: forest
 ---
 
-Eksperiment je do skoro bio jedini način da se ispitaju prirodni fenomeni, ekskluzivno dostupan samo naukama koje mogu lako da ih izvode. Istraživač koji bi hteo da ispita prirodu neeksperimentalnim metodama (zato što je izvođenje eksperimenta neetičko ili nemoguće) je bio ograničen na ispitivanje korelacija. Kada u prirodi vidimo dve stvari koje se dešavaju zajedno, ne možemo zasigurno znati koja uzrokuje koju, niti da li su uopšte povezane (takođe, postoje uzroci koji uopšte nisu korelisani).[^1] Svet medicine, a i nauke njoj sličnoj, bile su ograničene na tvrdnje asocijacija. Naučnici su želeli da kažu $A$ uzrokuje $B$ ($A\rightarrow B$), ali nisu smeli, jer su takve tvrdnje bile prejake za statističke metode. Medicinska literatura je prepuna reči koje izbegavaju uzročne tvrdnje --- kao što su: veza, asocijacija, korelacija, značajna povezanost [@hernán2018]. Ispostavlja se da je sasvim moguće samo posmatranjem doći do uzroka stvari. Možemo li bez ikakvog intervenisanja, tj. samo gledanjem prirode, doći do zaključaka šta bi se desilo da zapravo uradimo nešto?
+Eksperiment je do skoro bio jedini način da se ispitaju prirodni fenomeni, ekskluzivno dostupan samo naukama koje mogu lako da ih izvode. Istraživač koji bi hteo da ispita prirodu neeksperimentalnim metodama (zato što je izvođenje eksperimenta neetičko ili nemoguće) je bio ograničen na ispitivanje korelacija. Kada u prirodi vidimo dve stvari koje se dešavaju zajedno, ne možemo zasigurno znati koja uzrokuje koju, niti da li su uopšte povezane (takođe, postoje uzroci koji uopšte nisu korelisani).[^1] Svet medicine, a i nauke njoj sličnoj, bile su ograničene na tvrdnje asocijacija. Naučnici su želeli da kažu $A$ uzrokuje $B$ ($A\rightarrow B$), ali nisu smeli, jer su takve tvrdnje bile prejake za statističke metode. Medicinska literatura je prepuna reči koje izbegavaju uzročne tvrdnje --- kao što su: veza, asocijacija, korelacija, značajna povezanost [@hernán2018]. Možemo li bez ikakvog intervenisanja, tj. samo gledanjem prirode, doći do zaključaka šta bi se desilo da zapravo uradimo nešto?
 
 [^1]: Poznata mantra statistike: "Korelacija ne znači kauzalnost." Međutim, kauzalnost ne garantuje ni korelaciju.
 
@@ -40,7 +40,7 @@ Ono što čoveka najviše razlikuje od životinja je sposobnost da zamisli *blis
     "Šta da sam uradio? Zašto?"\
     Primer: Da li mi je aspirin zaustavio glavobolju?
 
-Ako se velika većina istraživanja bazira na asocijacijama. Posledica takvog istraživanja je da niko ne može pretpostaviti šta će se desiti ako uzmemo i uradimo nešto. To je ogroman problem. Skoro smo u Beogradu imali veliko nevreme. Vetar je doslovno odnosio krovove. Te dve stvari je svako mogao da primeti (prvi stepenik, asocijacija; $\rho = \text{corr}(vetar, odnošenje\,krova)$), međutim ako bi se neko popeo na svoj krov i počeo da baca crepove, ma koliko se trudio ne bi prizvao vetar (kauzalna strelica ide $vetar \rightarrow odnošenje \,krova$, a ne suprotno). Koncept kauzalne strelice ćemo dodatno istražiti u narednim poglavljima, pogotovo kada budemo pričali o kauzalnim dijagramima. Jedno po jedno.
+Velika većina istraživanja se bazira na asocijacijama. Posledica takvih istraživanja je da niko ne može pretpostaviti šta će se desiti ako uradimo nešto --- tj. teško je predvideti posledice intervencija. To je ogroman problem. Skoro smo u Beogradu imali veliko nevreme. Vetar je doslovno odnosio krovove. Te dve stvari je svako mogao da primeti (prvi stepenik, asocijacija; $\rho = \text{corr}(vetar, odnošenje\,krova)$), međutim ako bi se neko popeo na svoj krov i počeo da baca crepove, ma koliko se trudio ne bi prizvao vetar (kauzalna strelica ide $vetar \rightarrow odnošenje \,krova$, a ne suprotno). Koncept kauzalne strelice ćemo dodatno istražiti u narednim poglavljima, pogotovo kada budemo pričali o kauzalnim dijagramima. Jedno po jedno.
 
 # Šta je kauzalno zaključivanje?
 
