med-dg: intro & exm

--- a/myblog/posts/sr/med-dg/biblio.bib
+++ b/myblog/posts/sr/med-dg/biblio.bib
@@ -10,3 +10,29 @@
 	url = {https://doi.org/10.1007/s11606-023-08359-1},
 	langid = {en}
 }
+
+@book{kahneman2013,
+	title = {Thinking, Fast and Slow},
+	author = {Kahneman, Daniel},
+	year = {2013},
+	month = {04},
+	date = {2013-04-02},
+	publisher = {Farrar, Straus and Giroux},
+	edition = {1st edition},
+	address = {New York},
+	langid = {English}
+}
+
+@inbook{eddy1982,
+	title = {Probabilistic reasoning in clinical medicine: Problems and opportunities},
+	author = {Eddy, David M.},
+	editor = {Tversky, Amos and Kahneman, Daniel and Slovic, Paul},
+	year = {1982},
+	date = {1982},
+	publisher = {Cambridge University Press},
+	pages = {249--267},
+	doi = {10.1017/CBO9780511809477.019},
+	url = {https://www.cambridge.org/core/books/judgment-under-uncertainty/probabilistic-reasoning-in-clinical-medicine-problems-and-opportunities/661E12D1ECD669EDB5B410407A4BB570},
+	note = {DOI: 10.1017/CBO9780511809477.019},
+	address = {Cambridge}
+}
