med-dg: draft 1

--- a/myblog/posts/sr/med-dg/biblio.bib
+++ b/myblog/posts/sr/med-dg/biblio.bib
@@ -36,3 +36,18 @@
 	note = {DOI: 10.1017/CBO9780511809477.019},
 	address = {Cambridge}
 }
+
+@article{mccormack1973,
+	title = {Colonization with genital mycoplasmas in women},
+	author = {McCormack, W. M. and Rosner, B. and Lee, Y. H.},
+	year = {1973},
+	month = {04},
+	date = {1973-04},
+	journal = {American Journal of Epidemiology},
+	pages = {240--245},
+	volume = {97},
+	number = {4},
+	doi = {10.1093/oxfordjournals.aje.a121505},
+	note = {PMID: 4697645},
+	langid = {eng}
+}
