--- a/myblog/posts/sr/med-dg/index.qmd
+++ b/myblog/posts/sr/med-dg/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Klinički rezon je kocka"
-description: "Desc."
+description: "Dijagnostičkom razmišljanju kao formalnoj disciplini se ne posvećuje dovoljno pažnje. U ovom članku će biti pregledan probabilistički pristup dijagnostici --- kao argument da obrazovanje budućih lekara treba da sadrži praktične vežbe iz dijagnostičkog razmišljanja."
 date: today
 date-format: D/MM/YYYY
 lang: hr
@@ -21,6 +21,9 @@ mermaid:
 draft: true
 ---
 
+-   [ ] Opisati mehanizam u @exm-rak.
+-   [ ] Popravi jednacinu u @exm-uti.
+
 ::: columns
 ::: {.column width="50%"}
 Artur Konan Dojl je inspriaciju za popularnog lika Šerloka Holmsa dobio gledajući dektektivski rad Džosefa Bela, hirurga u Edinburgu. "Koristite svoje oči! Koristite oči," govorio je Bel svojim studentima medicine. Nije ni čudo kako se inspiracija za najpopularnijeg detektiva baš našla među lekarima, jer nema očiglednije upotrebe dedukcije i indukcije od postavljanje dijagnoze. Priče pacijenta, opservacije i (od skoro) raznih testovi pretstavljaju izazov svakom dobrom rezonu.
@@ -35,35 +38,32 @@ Iskusni kliničari su u stanju da intuitivno daju tačnu dijagnozu. Međutim, ni
 
 [^1]: Bitno je napomenuti da je su delovi ove knjige osporeni kada je psihologiju zahvatila replikaciona kriza. Svakako, teorija dualnih kognitivnih procesa je dobar konceptualni model razmišljanja za koji postoje dokazi. Dovoljno za ovu diskusiju.
 
-Kako kliničar od novajlije ka ekspertizi akumulira iskustvo, tako sve više koristi brzi kognitivni sistem. Tada je jako teško promeniti ustaljenu praksu, a još teže ispraviti greške ako su one nastale. Možda i najtragičnije od svega je što iskusan kliničar više nije u stanju da prenese jednom stečen rezon na mlađe kolege. Kletva znanja je uzela maha i ekspert se sada više ne seća kako je bilo biti početnik --- tj. sa kojim problemima se on muči. Veštinom kliničkog zaključivanja sad mora svaki student da ovlada sam.
+Kako kliničar od novajlije ka ekspertizi akumulira iskustvo, tako sve više koristi brzi kognitivni sistem. Tada je jako teško promeniti ustaljenu praksu, a još teže ispraviti greške ako su one nastale. Možda i najtragičnije od svega je što iskusan kliničar više nije u stanju da prenese jednom stečen rezon na mlađe kolege. Kletva znanja je uzela maha i ekspert se sada više ne seća kako je bilo biti početnik --- tj. sa kojim problemima se on muči. Veštinom kliničkog zaključivanja mora svaki student da ovlada sam, ali to ne znači da mu se ne može olakšati.
 
-U narednim poglavljima ćemo se upoznati sa probabilističim pogledom na postavljanje dijagnoza, i kako analitičnost može da doprinese boljoj praksi.
+U narednim poglavljima ćemo se upoznati sa probabilističim pogledom na postavljanje dijagnoza, i kako analitičnost može da doprinese boljoj praksi. Proćićemo kroz primere vezane za uticaj dijagnostičih testova, simptoma i znakova na naše početne pretpostavke o mogućoj dijagnozi. Na kraju, pogledaćemo neke od najčešćih kognitivnih grešaka koje se desavaju tokom medicinskog zaključivanja.
 
 # Postavljanje dijagnoze je probabilistički poduhvat
 
 ## Apriorna verovatnoća
 
-Apriorna verovatnoća pretstavlja jačinu našeg ubeđenja o prisustvu bolesti pre nego što smo dobili ikakve informacije o pacijentu. Kako sve verovatnoće imaju vrednosti od 0 (verujemo da je neverovatno) do 1 (verujemo da je sigurno) tako i naše pretpostavke razlikuju u jačini.[^2] Kako bi bilo što tačniji u svojim dijagnozama trebali bi da podesimo ove pretpostavke što preciznije. Najprostiji način je vezati svaku bolest u odnosu na njenu prevalencu u određenoj populaciji.
+Apriorna verovatnoća pretstavlja jačinu našeg ubeđenja o prisustvu bolesti pre nego što smo dobili ikakve informacije o pacijentu. Kako sve verovatnoće imaju vrednosti od 0 (verujemo da je neverovatno) do 1 (verujemo da je sigurno) tako se i naše pretpostavke razlikuju u jačini.[^2] Kako bi bili što tačniji u svojim dijagnozama trebamo da podesimo ove pretpostavke što preciznije. Najprostiji način je vezati svaku bolest u odnosu na njenu prevalencu u određenoj populaciji.
 
 [^2]: Ovaj subjektivni pogled na verovatnoće kao nivo ličnog ubeđenja se zove Bajesova interpretacija verovatnoća. Postoje škole mišljenja koja se ne slažu sa ovom pretpostavkom.
 
-Svaka osoba u našem okruženju ima neku apriornu verovatnoću za određenu bolest. Stariji čovek ima veći rizik od infarkta miokarda od mlađeg, dok mlađi imaju veći rizik od nekih infektivnih agenasa na koje još nisu stekli imunitet. Apriorna verovatnoća je *veoma* bitna. Onog momenata kada se u dijagnostiči proces upletu različiti testovi,
+Svaka osoba u našem okruženju ima neku apriornu verovatnoću za određenu bolest. Stariji čovek ima veći rizik od infarkta miokarda od mlađeg, dok mlađi imaju veći rizik od nekih infektivnih agenasa na koje još nisu stekli imunitet. Apriorna verovatnoća postaje *veoma* bitna onog momenata kada se u dijagnostiči proces upletu različiti testovi.
 
-## A gde su dokazi?
-
-Kako bismo uvideli efekat apriorne verovatnoće da korisnost medicinskih testova pogledaćemo pitanje koje je @eddy1982 deo kliničarima.
+Kako bismo uvideli efekat apriorne verovatnoće da korisnost medicinskih testova pogledaćemo (parafrazirano) pitanje koje je @eddy1982 deo kliničarima.
 
 ::: {#exm-rak}
 ## Uticaj apriorne verovatnoće
 
-Žena vam ulazi u ordinaciju. Čula je da sve više žena oboleva od raka dojke i zabrinuta je. Verovatnoća da žena od 40 god. koja dolazi na redovan skrining ima rak dojke je 1%. Vi kao kliničar je pošaljete na kontrolnu mamografiju. Mamografija ima senzitivnost 90%, i specifičnost od 91%. Na sledećoj kontroli je vidno uspaničena jer je test bio pozitivan. Koja je verovatnoća da ona stvarno ima rak dojke ($P(\text{Rak}\,|\,+$)?
+Žena vam ulazi u ordinaciju. Čula je da sve više žena oboleva od raka dojke i zabrinuta je. Verovatnoća da žena od 40 god. koja dolazi na redovan skrining ima rak dojke je 1%. Vi kao kliničar je pošaljete na kontrolnu mamografiju. Mamografija ima senzitivnost 90%, i specifičnost od 91%. Na sledećoj kontroli je vidno uspaničena jer je test bio pozitivan. Koja je verovatnoća da ona stvarno ima rak dojke ukoliko je test bio pozitivan ($P(\text{Rak}\,|\,+$)?
 :::
 
 ::: {.callout-note collapse="true"}
-## Rešenje
+## Rešenje: @exm-rak
 
-$\frac{1}{11}$ ili $9.1\%$. Verovatnoća raka dojke kada je mamografija pozitivna ($P(\text{Rak}\,|\,+$) uveliko zavsi od apriorne verovatnoće. Da je prevalenca (uverenje) raka dojke kod 40 god. žena 10%, verovatnoća bi skočila malo preko $50\%$. 
-
+$\frac{1}{11}$ ili $9.1\%$. Verovatnoća raka dojke kada je mamografija pozitivna ($P(\text{Rak}\,|\,+$) uveliko zavsi od apriorne verovatnoće. Da je prevalenca (uverenje) raka dojke kod 40 god. žena 10%, verovatnoća bi skočila malo preko $50\%$.
 :::
 
 ## Ažuriranje uverenja
@@ -73,14 +73,41 @@ Iz @exm-rak smo videli da medicinsko testiranje utiče na krajnju verovatnoću b
 ::: {#exm-uti}
 ## Ažuriranje uverenja
 
-Devojka od 26 god. se žali na urinarne tegobe. Apriorna verovatnoća urinarnih infekcija je toliko velika kod žena u reproduktivnoom periodu da je opravdano lečiti ih i bez dodatnog testiranja. Na analizi urina se ističu povišeni leukociti, što ide u prilog infekciji. Na genitalnom brisu je izolovana *Ureaplasma spp.* Koja je verovatnoća da je *Ureaplasma* uzročnik urinarnih tegoba?
+Devojka od 26 god. se žali na urinarne tegobe. Apriorna verovatnoća urinarnih infekcija je toliko velika kod žena u reproduktivnoom periodu da je opravdano lečiti ih i bez dodatnog testiranja. Na analizi urina se ističu povišeni leukociti (leukociturija), što ide u prilog infekciji. Na genitalnom brisu je izolovana *Ureaplasma spp.* Koja je verovatnoća da je *Ureaplasma* uzročnik urinarnih tegoba?
 :::
 
-```{mermaid}
-flowchart LR
-  A("Urinarna tegobe") --> B("Infekcija")
-```
+::: {.callout-note collapse="true"}
+## Rešenje 1: @exm-uti
 
+Bez dodatnih informacija jedino što možemo zaključiti je da je *Ureaplasma* uzročnik tegoba. Uspešnost lečenja nam onda potvrđuje dijagnozu.
+:::
+
+*Ureaplasma spp.* je poznat kolonizator seksualno aktivnih zdravih žena [@mccormack1973]. Uz tu informaciju, šta ako dodatno saznamo da je pacijentkinja pila antibiotike u periodu pre uzimanja brisa. Kao i da je u dugoj monogamskoj vezi. Kako to menja naše uverenje da je *Ureaplasma spp.* uzročnik?
+
+::: {.callout-note collapse="true"}
+## Rešenje 2: @exm-uti
+
+U ovom slučaju je verovatnoća da je uzročnik *Ureaplasma spp.* mnogo manji nego da je antibiotikom uklonila prvobitnog uzročnika ($P(\text{Uzrok: Ureaplasma} \mid \text{Antibiotik, Monogamija}) \ll P(\text{Uzrok: Ureaplasma} \mid \text{Bez Antibiotika})$).
+:::
+
+Neke informacije drastično menjaju interpretaciju. Moć informacije da promeni naše uverenje je proporcionalna njenom preciznošću, tj. tačnosti klasifikacije stvarno bolesnih kao bolesne. Zbog toga su mnogi delovi fizikalnog pregleda zamenjeni preciznijim metodama. Retko koji lekar će danas postaviti dijagozu samo na osnovu fizikalnog pregleda. Što je i ispravno, jer većina znakova fizikalnog pregleda nije dovoljno pouzdana.[^4]
+
+[^4]: Uloga fizikalnog pregleda je primarno u uspostavljanju odnosa doktor-pacijent. Tu većinski ritualnu ulogu ne treba potceniti, jer je jako važna za proces lečenja. Međutim, ta tema prevazilazi okvir ovog članka.
+
+```{mermaid}
+%%| label: fig-updating
+%%| fig-cap: "Something."
+
+flowchart LR
+  A("Urinarna tegobe") --> B("Infekcija?")
+  C["Leukociturija"] --> B
+  B --> U{"Uzročnik?"}
+  U --> D["Ureaplasma spp."]
+  AB("Korišćenje antibiotika") --> U
+  M("Monogamija") --> U
+  U --> N["Nepoznat uzročnik"]
+  
+```
 
 # Kako se formira diferencijalna dijagnoza
 
@@ -91,41 +118,54 @@ Reprezentacija problema je najbitniji deo dijagnostičkog procesa. Iz narativa p
 ::: {#exm-rp}
 ## Reprezentacija problema
 
-50-godišnja žena sa novom dijagnozom akutne mijeloidne leukemije započinje lečenje hemioterapijom. Nakon 1. dana počinje da se oseća grozničavo i malaksalo. Njena telesna temperatura je $>38.8^{\circ}\text{C}$, sa leukocitima od $0.8/\text{mm}^3$ i neutrofilima od $< 100/\text{mm}^3$. Analize urina i radiografija pluća su uredne. *Izdvojiti i grupisati ključne elemente u jedinstven medicinski termin.*
+50-godišnja žena sa novom dijagnozom akutne mijeloidne leukemije započinje lečenje hemioterapijom. Nakon 1. dana počinje da se oseća grozničavo i malaksalo. Njena telesna temperatura je $>38.8^{\circ}\text{C}$, sa brojem leukocita od $0.8\,\text{ćelija}/\text{mm}^3$ i brojem neutrofila $< 100\,\text{ćelija}/\text{mm}^3$. Analize urina i radiografija pluća su uredne. *Izdvojiti i grupisati ključne elemente u jedinstven medicinski problem.*
 :::
 
 ::: {.callout-note collapse="true"}
 ## Rešenje
 
-Ovde ide odgovor.
+50-godišnja žena sa AML-om tokom indukcije hemioterapije ima *prvu*, **visoko rizičnu, nelokalizovanu febrilnu neutropeniju**.
+
+Ovo je reprezentacija kliničkog problema sa visokim nivoom apstrakcije. Ako razložimo svaki termin pojedinačno videćemo kolika količina informacija se prenosi samo u ovoj jednoj rečenici.
+
+- Prvu: Vremenski počela pre 1 dana. Ima drugačije implikacije od rekurentne ili prezistentne (održane).
+- Visoko rizična: Febrilne neutropenije se dele na visoko/nisko rizične u zavisnosti od verovatnoće ozbiljnih komplikacija na osvonu raznih kriterijuma. Ova klasifikacija je bitna jer *utiče na terapiju*. 
+- Nelokalizovana: Fokus (izvor) infekcije nije pronađen dijagnostičkim testovima i pregledom. Različit je rizik za pacijente kojima nije pronađen fokus u odnosu na one kojima je mikrobiološki potvrđena infekcija.
+- Febrilna: Definicija febrilnosti prodrazumeva jednu izmerenu oralnu temperaturu od $>38.3^{\circ}\text{C}$ ili $> 38.0^{\circ}\text{C}$ u trajanju od minimum 1 sat. 
+- Neutropenija: broj neutrofila $< 1500$ ili $< 1000\,\text{ćelija}/\text{mm}^3$. Niže vrednosti nose veći rizik.[^5] 
 :::
 
-Svaki student medicine poznaje deo anamneze (istorije) pacijenta koji se odnosi na glavne tegobe. Retko se uloga tog praznog polja na papiru izričito ističe.
+Svaki student medicine poznaje deo anamneze (istorije) pacijenta koji se odnosi na glavne tegobe. Retko se uloga tog polja na papiru izričito ističe. Jednom kada se medicinski problem dobro predstavi, može se formirati dobra diferencijalna dijagnoza. Ukoliko je problem loše identifikovan i sama diferencijalna dijagnoza će biti preopširna ili pogrešna. Na primer, diferencijalna dijagnoza dispneje (otežanog disanja) je dugačka i zahvata kako psihološke tako i organske uzroke. Suprotno, *hronična dispeja u naporu,* ima znatno kraću diferencijalnu dijagnozu.
 
-Detaljnon navođenje parametara se može dodatno tražiti pod uslovom da su kriterijumi otvoreni za subjektivnu diskusiju. Pad leukocita ispod X ml/dL je neutropenija u svakom smislu.
-
-::: {#exm-giht}
-## Bol u kolenu
-
-Primer za diskriminaciju vs jedinstvene siptome.
-:::
-
-::: {.callout-note collapse="true"}
-## Rešenje
-
-Ovde ide odgovor.
-:::
-
-Pisali smo anamneze ali nam niko izričito nije rekao.
-
-## Alarmni simptomi
-
-Rizik greške je prevelik. Uvek proveriti.
+[^5]: Detaljno navođenje parametara se može dodatno tražiti pod uslovom da su kriterijumi otvoreni za subjektivnu diskusiju. Pad leukocita na $0.8\,\text{ćelija}/\text{mm}^3$ je neutropenija u svakom smislu.
 
 # Mentalna Organizacija Bolesti
 
-# Česte Greške
+## Skripte Bolesti
 
-## Usidravanje
+Šta su skripte bolesti? 
+Kako ih koristiti.
 
-Tekst oko usidravanja.
+## Plan lečenja
+
+Češće razmatrati ciljeve lečenja.
+Da li pacijent ima korist od dijagnostike?
+
+# Česte Greške u Zaključivanju
+
+|     Pogrešna Zaključivanja     |                                                     Opis                                                    |
+|:------------------------------:|:-----------------------------------------------------------------------------------------------------------:|
+| Potvrđivanje Pretpostavki      | Fokusiranje na informacije koje podržavaju postojeća uverenja i ignorisanje protivrečnih dokaza.            |
+| Usidravanje        | Preterano oslanjanje na prvu informaciju koja se susretne; često vodi ka uskim diferencijalnim dijagnozama.                 |
+| Heuristika Dostupnosti         | Procena verovatnoće na osnovu toga koliko lako se prisećamo bolesti; potencijalno precenjuje retke bolesti.          |
+| Pristrastnost Prisećanja                | Verovanje da bi se ishod mogao predvideti nakon što se dogodi.              |
+| Previše Samopouzdanja          | Precenjivanje sposobnosti ili dijagnostičke tačnosti, što vodi ka greškama u dijagnozi i lečenju.           |
+| Zanemarivanje Osnovnih Stopa   | Ignorisanje statističke verovatnoće u korist specifičnih detalja slučaja, utiče na tačnu dijagnozu.         |
+| Bias Samousluživanja           | Pripisivanje uspeha svojoj veštini i neuspeha spoljnim faktorima, utiče na samoprocenu.                     |
+| Bias Zbog Investiranog Resursa | Nastavljanje neuspešnog pravca radnje zbog prethodno uloženih resursa, utiče na odluke o lečenju.           |
+| Bias Pripisivanja              | Pripisivanje tuđeg ponašanja ličnosti i svog ponašanja spoljnim faktorima, utiče na razumevanje pacijenata. |
+| Zanemarivanje Verovatnoće      | Ignorisanje stvarnih verovatnoća, potencijalno propuštanje ozbiljnih ali manje verovatnih dijagnoza.        |
+
+# Zaključak
+
+Dijagnostičkom rezonu se posvećuje manje pažnje nego što je to potrebno. Jedan dobar medicinski kurikulum bi trebao da sadrži praktične vežbe iz dijagnostičkog razmišljanja uz podršku specijalizanata. Ne samo da bi se time studenti upoznali sa čestim medicinskim situacijama, već bi i usvajanja znanja bilo mnogo efikasnije. Zasigurno bi takva praksa napravila još bolje doktore.
